--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# env
+src/environments/environment.ts
+src/environments/environment.development.ts
+src/environments/.env
+
